# autorally

./: .gitignore  Doxyfile  README.md  mainpage.dox
autorally/: CHANGELOG.rst  CMakeLists.txt  package.xml
autorally_control/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
autorally_control/cfg/: PathIntegralParams.cfg  gpsWaypoint_params.cfg
autorally_control/include/autorally_control/: placeholder.txt
autorally_control/launch/: aruco_detect.launch  cem_nn_adaptive_normal.launch  constantSpeedController.launch  gpsImuEstimator.launch  gpsWaypoint.launch  joystickController.launch  lap_stats.launch  path_integral_bf.launch  path_integral_carla.launch  path_integral_nn.launch  path_integral_nn_adaptive.launch  path_integral_nn_adaptive_cauchy.launch  path_integral_nn_adaptive_cauchy_marietta.launch  path_integral_nn_adaptive_laplace.launch  path_integral_nn_adaptive_laplace_marietta.launch  path_integral_nn_adaptive_normal.launch  path_integral_nn_adaptive_normal_ccrf_obstacles.launch  path_integral_nn_adaptive_normal_identity.launch  path_integral_nn_adaptive_normal_marietta.launch  path_integral_nn_adaptive_normal_marietta_obstacles.launch  path_integral_nn_adaptive_normal_obstacles.launch  path_integral_nn_gazebo.launch  path_integral_nn_marietta.launch  path_integral_nodelet.launch  recordWpts.launch  waypointFollower.launch  waypoints
autorally_control/src/: autorally_pc_plant.cpp
autorally_control/src/ArucoDetector/: ArucoDetector.cpp  ArucoDetector.h  CMakeLists.txt
autorally_control/src/ConstantSpeedController/: CMakeLists.txt  ConstantSpeedController.cpp  ConstantSpeedController.h
autorally_control/src/PID_controller/: pid_waypoint_follower.cpp  pid_waypoint_follower_main.cpp
autorally_control/src/gpsWaypoint/: CMakeLists.txt  GenerateWaypoints  gpsWaypoint.cpp  gpsWaypoint.h
autorally_core/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
autorally_core/cfg/: camera_auto_balance_params.cfg  camera_trigger_params.cfg
autorally_core/launch/: arduinoOnboard.launch  aruco_detect.launch  autorally.launch  autorally_chassis.launch  autorally_core_manager.launch  autorally_imu_3dm_gx4.launch  baseStation.launch  camera.launch  camera_auto_balance.launch  camera_auto_balance_flir.launch  camera_auto_balance_ptgrey.launch  camera_flir.launch  camera_ptgrey.launch  camera_trigger.launch  cameras.launch  chronyStatus.launch  flir_default_dynconfig.yaml  flir_test_dynparams.yaml  gpsBase.launch  gpsRover.launch  hardware.machine  imageRepublisher.launch  ocs.launch  robot.urdf  runStop.launch  servoInterface.launch  spinnaker_camera_basic.launch  spinnaker_camera_test.launch  stateEstimator.launch  systemStatus.launch  wheel_odometry.launch  xbeeCoordinator.launch  xbeeNode.launch
autorally_core/test/: CMakeLists.txt  diagnosticsTest.cpp  pololuMicroMaestroTest.cpp  serialSensorInterfaceTest.cpp
autorally_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
autorally_description/launch/: autoRallyPlatform.launch  autoRallyPlatform1.launch  autoRallyPlatformRviz.launch  rviz.launch
autorally_description/scripts/: convertSpeedToImage.py  createTextureImage.py
autorally_description/urdf/: autoRallyPlatform.urdf.xacro  autoRallyPlatform.urdf1.xacro  autoRallyPlatformChassis.stl  autoRallyPlatformFrontWheel.stl  autoRallyPlatformFrontWheel1.ipt  autoRallyPlatformFrontWheel1.stl  autoRallyPlatformFrontWheelTextured.dae  autoRallyPlatformRearWheel.stl  autoRallyPlatform_1.urdf.xacro  autoRallyPlatform_2.urdf.xacro  autoRallyTrack.dae  autoRallyTrack.urdf  bamboo.dae  empty_sky_AR.world  fence.dae  gazebo.material  jump18deg.urdf  jump22deg.urdf  jump26deg.dae  jump26deg.stl  jump26deg.urdf  jump30deg.stl  jump30deg.urdf  shed.dae  tree.dae
autorally_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
autorally_gazebo/config/: autoRallyPlatformCtrlrParams.yaml  autoRallyPlatformJointCtrlrParams.yaml
autorally_gazebo/launch/: CCRF_new.launch  autoRallyJumpGazeboSim.launch  autoRallyJumpWorld.launch  autoRallyTrackAruco.launch  autoRallyTrackCCRFGazeboSim.launch  autoRallyTrackCCRFGazeboSimNoJoystick.launch  autoRallyTrackCCRFModifiedWorld.launch  autoRallyTrackCCRFMultipleCarsGazeboSim.launch  autoRallyTrackCCRFWorld.launch  autoRallyTrackGazeboSim.launch  autoRallyTrackGazeboSimNoJoystick.launch  autoRallyTrackMultipleCarsGazeboSim.launch  autoRallyTrackObstaclesGazeboSim.launch  autoRallyTrackWorld.launch  rssGazeboSim.launch  rssWorld.launch  singlePlatform.launch
autorally_gazebo/nodes/: autorally_controller.py  ground_truth_republisher.py  wheelSpeedsGazebo.py
autorally_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autorally_msgs/msg/: ArucoDetection.msg  ArucoDetections.msg  arucoDetection.msg  arucoDetectionArray.msg  chassisCommand.msg  chassisCommandTrajectory.msg  chassisState.msg  imageMask.msg  lapStats.msg  lapStatsStamped.msg  line2D.msg  neuralNetLayer.msg  neuralNetModel.msg  obstacleStatus.msg  pathIntegralCosts.msg  pathIntegralParams.msg  pathIntegralStats.msg  pathIntegralStatus.msg  pathIntegralTiming.msg  point2D.msg  resetObstacles.msg  runstop.msg  safeSpeed.msg  servoMSG.msg  spawnObstacles.msg  stateEstimatorStatus.msg  wheelSpeeds.msg
autorally_util/: 99-autoRally.rules  CHANGELOG.rst  CMakeLists.txt  chrony.keys  chronyClient.conf  chronyServer.conf  package.xml  roscoreAutostart.sh  setCameraPermissions.sh  setupEnvCog.sh  setupEnvKezia.sh  setupEnvLocal.sh  setupEnvLocal.zsh  setupEnvRemote.sh  setupEnvRemote.zsh  setupEnvVariables.sh
autorally_util/config/: arChassisConfig_CHASSIS_NAME.yaml  camera_calibration_GUID.yaml  chassisCommandPriorities.yaml  servoCommandPriorities.yaml  throttlePositionCalibration.yaml
autorally_util/scripts/: rosbag_analyzer.py  rosbag_vip.py
autorally_vision/: CMakeLists.txt  package.xml
autorally_vision/ArucoDetector/: ArucoDetector.cpp  CMakeLists.txt
autorally_vision/launch/: aruco_detector.launch  camera_suite.launch  label_images.launch  label_images_real.launch
autorally_vision/src/: CMakeLists.txt
(+290 files in other folders)
