<?xml version="1.0"?>
<!--
  Copyright (c) 2016 Georgia Institute of Technology

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>autorally</name>
  <version>0.2.5</version>
  <description>Autorally metapackage</description>
  
  <author>Brian Goldfain</author>
  <maintainer email="bgoldfain3@gatech.edu">Brian Goldfain</maintainer>

  <author email="bgoldfain3@gatech.edu">Brian Goldfain</author>

  <license>BSD</license>

  <url type="website">http://autorally.github.io</url>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>autorally_control</run_depend>
  <run_depend>autorally_core</run_depend>
  <run_depend>autorally_description</run_depend>
  <run_depend>autorally_gazebo</run_depend>
  <run_depend>autorally_msgs</run_depend>
  <run_depend>autorally_util</run_depend>

  <export>
    <metapackage />
  </export>

</package>
