<?xml version="1.0"?>
<!--
  Copyright (c) 2016 Georgia Institute of Technology

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>autorally_core</name>
  <version>0.2.5</version>
  <description>All core software (code specific to hardware on the robot) created for the autorally project resides here</description>

  <maintainer email="bgoldfain3@gatech.edu">Brian Goldfain</maintainer>

  <author email="bgoldfain3@gatech.edu">Brian Goldfain</author>

  <license>BSD</license>

  <url type="website">http://autorally.github.io</url>

  <author>Brian Goldfain</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>autorally_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pointgrey_camera_driver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>autorally_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
