<?xml version="1.0"?>
<!--
  Copyright (c) 2016 Georgia Institute of Technology

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>autorally_description</name>
  <version>0.2.5</version>
  <description>
    autorally_description contains the description (3D model,
    kinematics, mass, etc.) of the AutoRally platform and other models
    associated with the test track. This was developed from
    ackermann_vehicle_description. 
  </description>
  
  <maintainer email="bgoldfain3@gatech.edu">Brian Goldfain</maintainer>
  <license>BSD</license>

  <author email="bgoldfain3@gatech.edu">Brian Goldfain</author>

  <url type="website">http://autorally.github.io</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
