<?xml version="1.0"?>
<!--
  Copyright (c) 2016 Georgia Institute of Technology

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>autorally_msgs</name>
  <version>0.2.5</version>
  <description>Custom messages used by autorally</description>

  <maintainer email="bgoldfain3@gatech.edu">Brian Goldfain</maintainer>

  <author email="bgoldfain3@gatech.edu">Brian Goldfain</author>

  <url type="website">http://autorally.github.io</url>

  <license>BSD</license>

  <author>Brian Goldfain</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
