<package>
    <name>autorally_vision</name>
    <version>0.0.1</version>
    <description>All vision software created for the autorally project resides here</description>
    <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/vision</url>
    <!-- <url type="bugtracker"></url> -->

    <author>Jason Gibson</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>autorally_core</build_depend>
    <build_depend>autorally_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>autorally_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rosbag_storage</build_depend>

    <run_depend>autorally_core</run_depend>
    <run_depend>autorally_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>rosbag_storage</run_depend>

    <!--
    <export>
        <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" cflags="-I${prefix}/include"/>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
    -->
</package>
